# medabattle_arcade

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
game/: __init__.py  app.py
game/battle/core/: animations.py  controller.py  models.py
game/battle/data/: skills.json
game/battle/ui/: widgets.py
game/core/: assets.py  config.py  input.py  saveio.py  scene.py
game/data/: config.json
game/data/saves/: slot3.json
game/data/story/: episode01.json
game/scenes/: __init__.py  battle_atb.py  battle_result.py  battle_shuttle.py  main_menu.py  save_select.py  story.py  title.py
medabattle_arcade.egg-info/: PKG-INFO  SOURCES.txt
scripts/: setup_venv.ps1
